styles/style.css
/* font link */

@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600;1,700&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800&display=swap');


/* universal styles */



*{
    margin: 0px;
    padding: 0px;
    font-family: 'Work Sans', sans-serif;
}


.container{
    max-width: 1250px;
    margin: 0 auto;
}




/* header-styles */

header{
    background-color: #f9f0f2;
    margin-top: 0px;
    padding: 1px 0px;
    margin-bottom: 80px;
}

/* -------------
    nav styles
---------------- */

.nav-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 50px;
  }
  
  .nav-title{
      font-size: 45px;
      font-weight: 700;
  }
  
  .nav-list ul{
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      align-items: center;
      justify-items: center;
  }
  .nav-list ul li{
      list-style: none;
      font-size: 18px;
      font-weight: 500;
      
  }
  
  .nav-list ul li a{
      text-decoration: none;
      color: black;
  }



.header-wrapper {
    margin-top: 100px;
    margin-bottom: 70px;
}

h1.sec-title {
    font-size: 64px;
    font-weight: 700;
    text-align: center;
}

.header-content {
    max-width: 870px;
    margin: 0 auto;
    text-align: center;
    margin-bottom: 100px;
}



.sec-description {
    font-size: 17px;
    color: #727272;
    font-weight: 400;
    text-align: center;
    margin: 20px 0px;
}

.btn {
    border: none;
    padding: 15px 25px;
    border-radius: 9px;
    background: orange;
    font-size: 20px;
    font-weight: 500;
    color: white;
}

.header-img img{
    width: 100%;
}


/* feature section styles*/



.container-2{
    max-width: 1100px;
    margin: 0 auto;
    display: grid;
    column-gap: 70px;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;

    margin-bottom: 100px;

}

.sec-image{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 25px;
    grid-row-gap: 25px;
}
.section-content {
    text-align: left;
}

h2 {}

.section-content h2 {
    font-size: 36px;
    font-weight: 600;
    color: #727272;
}

.black-title {
    font-size: 45px;
    color: black;
    font-weight: 700;
}

.orange-title {
    font-size: 45px;
    color: orange;
    font-weight: 700;
}

.section-description{
    font-size: 17px;
    color: #727272;
    font-weight: 400;
    text-align: left;
    margin: 20px 0px;
}


/* feature enjoy and love section styles */

.feature-sec-container{
    position: relative;
}
.content-part{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 55px;
}


.feature-sec-heading {
    font-size: 45px;
    font-weight: 700;
    color: black;
    padding-left: 20px;
    border-left: 5px solid orange;
}

.section-description {}

.sec-title {
    font-size: 20px;
    font-weight: 600;
}

.features-container{
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    row-gap: 20px;
}

.features {
    padding: 15px;
    border-radius: 10px;
    box-shadow:0px 8px 40px rgb(12 12 12 / 20%);
}

.btn-part {
    position: absolute;
    right: 300px;
    bottom: -65px;
    background: orange;
    padding: 35px 45px;
    border-radius: 10px;
    text-align: center;
}

.year {
    font-size: 65px;
    color: wheat;
    font-weight: 700;
}

.experience {
    font-size: 23px;
    font-weight: 500;
    color: white;
}


/* fact section styles */


#fact-section{
    margin-top: 150px;

}
.fact-content p{
    text-align: left;
    max-width: 600px;
    font-size: 18px;
    font-weight: 500;
    color:  #727272;

}

h2.sec-heading {
    font-size: 45px;
    margin-bottom: 30px;
}


.facts-container{
    margin-top: 100px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-items: center;
}

.facts {
    border: 1px solid #FF900E;
    border-radius: 10px;
    padding: 35px;
    text-align: center;
    transition: 1s;
}

.facts:hover{
    background: rgba(255, 70, 14, 0.257);
    transform: scale(1.3);
    

}


.facts h3 {
    font-size: 45px;
    color: #444242;
    font-weight: 600;
}

.facts span {
    font-size: 20px;
    font-weight: 600;
    color: #7e7c7c;
}



/* logo section styles */


.sec-heading {
    margin-top: 150px;
}

.sec-heading h2 {
    text-align: center;
    font-size: 45px;
}


.sec-heading p {
    max-width: 500px;
    margin: 20px auto;
}



.logos {
    display: grid;
    grid-template-columns: repeat(5,1fr);
    justify-items: center;
    margin-top: 45px;
}

.logo img{
    filter: grayscale(1);
}


.footer-content {
    margin-top: 120px;
    margin-bottom: 150px;
    text-align: center;
    padding: 33px;
    background: #f3dade;
    border-radius: 10px;
    font-weight: 500;
    color: #525151;
}





/* responsive design for mobile */


@media screen and (max-width:576px) {


    body{
        max-width: 90%;
        margin: 0 auto;
    }
    .nav-list ul{
        grid-template-columns: repeat(1,1fr);
    }
    .nav-container{
        flex-direction: column;
    }
    .container-2{
        grid-template-columns: repeat(1,1fr);
    }
    .sec-image{
        grid-template-columns: repeat(1,1fr);
        text-align: center;
    }
    
/* feature love and enjoy styles */

.content-part{
    grid-template-columns: repeat(1,1fr);
}

.features-container{
    width: 100%;
}
.feature-section-content{
    width: 100%;
}
.facts-container{
    grid-template-columns: repeat(1, 1fr);
    grid-row-gap: 15px;
}
.logos{
    grid-template-columns: repeat(1, 1fr);
    row-gap: 30px;
}
.btn-part {
    position: absolute;
    right: 30%;
    bottom: -6%;

    padding: 25px 35px;
    border-radius: 10px;
    
}
.sec-image img{
    width: 100%;
}


}

